--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/AutenticacaoUsuario.jar
+dist.jar=${dist.dir}/BilbliotecaSwing.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/AutenticacaoUsuario
+dist.jlink.output=${dist.jlink.dir}/BilbliotecaSwing
 excludes=
 file.reference.mysql-connector-j-8.1.0.jar=../../Downloads/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0.jar
 includes=**
@@ -72,7 +72,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=AutenticacaoUsuario
+jlink.launcher.name=BilbliotecaSwing
 main.class=CONEXAO.Conexao
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
