--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,13 +36,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/BilbliotecaSwing
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.1.0.jar=C:\\Java Biblioteca\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0\\mysql-connector-j-8.1.0.jar
+file.reference.mysql-connector-j-8.1.0.jar-1=../../Downloads/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.1.0.jar}
+    ${file.reference.mysql-connector-j-8.1.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -51,8 +51,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=19
-javac.target=19
+javac.source=20
+javac.target=20
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
