--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,13 +36,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/BilbliotecaSwing
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.1.0.jar-1=../../Downloads/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0.jar
+file.reference.mysql-connector-java-8.0.30.jar=..\\..\\Java essencial\\mysql-connector-java-8.0.30.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.mysql-connector-j-8.1.0.jar-1}
+    ${file.reference.mysql-connector-java-8.0.30.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
