--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/BilbliotecaSwing
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-8.1.0.jar=../../Downloads/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0.jar
+file.reference.mysql-connector-j-8.1.0.jar=../../../Downloads/mysql-connector-j-8.1.0/mysql-connector-j-8.1.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
